feat: 新增收藏接口
