# docs/swagger.json
@@ -226,6 +226,88 @@
                 }
             }
         },
+        "/api/v1/collection": {
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "收藏"
+                ],
+                "summary": "设置或取消收藏",
+                "parameters": [
+                    {
+                        "description": "文章",
+                        "name": "article",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/service.CollectionUpdateService"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/serializer.MessageResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/collection/{id}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "收藏"
+                ],
+                "summary": "收藏列表",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "每页数量",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "当前页数",
+                        "name": "page",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/serializer.CollectionListResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/message": {
             "post": {
                 "consumes": [
@@ -849,6 +931,47 @@
                 }
             }
         },
+        "serializer.Collection": {
+            "type": "object",
+            "properties": {
+                "ArticleID": {
+                    "description": "文章ID",
+                    "type": "string"
+                },
+                "profile": {
+                    "description": "简介",
+                    "type": "string"
+                },
+                "title": {
+                    "description": "标题",
+                    "type": "string"
+                }
+            }
+        },
+        "serializer.CollectionListResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "description": "状态码",
+                    "type": "integer",
+                    "example": 2000
+                },
+                "count": {
+                    "type": "integer"
+                },
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/serializer.Collection"
+                    }
+                },
+                "message": {
+                    "description": "自定义消息",
+                    "type": "string",
+                    "example": "success"
+                }
+            }
+        },
         "serializer.Message": {
             "type": "object",
             "properties": {
@@ -1161,6 +1284,22 @@
                 "topicId": {
                     "description": "话题ID",
                     "type": "integer"
+                }
+            }
+        },
+        "service.CollectionUpdateService": {
+            "type": "object",
+            "required": [
+                "articleID"
+            ],
+            "properties": {
+                "articleID": {
+                    "description": "文章ID",
+                    "type": "integer"
+                },
+                "collection": {
+                    "description": "收藏",
+                    "type": "boolean"
                 }
             }
         },
